🎨 mobile style fixes, deploying live

--- a/modules/homepage-header/homepage-header.css
+++ b/modules/homepage-header/homepage-header.css
@@ -21,7 +21,7 @@
   line-height: 1;
   margin: 0;
   margin-bottom: 5px;
-  letter-spacing: 0.2em;;
+  letter-spacing: 0.2em;
 }
 
 .homepage-header__tagline {
