--- a/modules/logo-page/logo-page.css
+++ b/modules/logo-page/logo-page.css
@@ -30,17 +30,28 @@
 
 .purchase-button {
   display: block;
+  width: 100%;
+  padding: 20px 10px;
+  margin: 30px 0 40px;
+  text-align: center;
   background-color: #6C6;
   background-image: linear-gradient( hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
   box-shadow: 0 3px 6px hsla(0, 0%, 0%, 0.2);
   color: white;
   font-size: 1.3rem;
-  width: 100%;
   border: none;
   border-radius: 10px;
-  padding: 20px 10px;
   cursor: pointer;
-  margin: 30px 0 40px;
+}
+
+.purchase-button:hover {
+  background-color: #7D7;
+  color: white;
+}
+
+.purchase-button:active {
+  background-color: #5C5;
+  box-shadow: inset 0 3px 10px hsla(0, 0%, 0%, 0.4);
 }
 
 .purchase-text li {
