--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -14,7 +14,7 @@
   <meta name="twitter:description" content="Hot and ready logos for sale" />
   <meta name="twitter:image" content="http://logo.pizza/img/collage-card.png" />
   {{! Facebook OpenGraph }}
-  <meta property="og:url" content="https://logo.pizza" />
+  <meta property="og:url" content="http://logo.pizza" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Logo Pizza" />
   <meta property="og:image" content="http://logo.pizza/img/collage-card.png" />
