--- a/modules/css-links/css-links.mustache
+++ b/modules/css-links/css-links.mustache
@@ -3,5 +3,5 @@
     <link rel="stylesheet" href="../{{this}}" />
   {{/each}}
 {{else}}
-  <link rel="stylesheet" href="css/logo-pizza.css" />
+  <link rel="stylesheet" href="css/logo-pizza.css?2" />
 {{/if}}
