--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -34,9 +34,7 @@
 
   {{> homepage-intro}}
 
-  {{> filter}}
-
-  {{> thumbnails}}
+  {{> for-sale}}
 
   {{> flavor-text}}
 
@@ -45,6 +43,8 @@
   {{> hire-me firstLine="Need a custom logo?"}}
 
   {{> about}}
+
+  {{> previous}}
 
 </div> {{! content-wrap }}
 
