--- a/modules/footer-socials/footer-socials.mustache
+++ b/modules/footer-socials/footer-socials.mustache
@@ -1,18 +1,20 @@
 <ul class="footer-socials">
   <li class="footer-socials__item">
     <a class="footer-socials__link" href="https://twitter.com/metafizzyco">
-      <svg class="footer-socials__symbol">
-        <use xlink:href="#twitter-logo"></use>
+      <svg class="footer-socials__icon" xmlns="http://www.w3.org/2000/svg"
+        viewbox="0 0 512 512" width="32" height="32">
+        <path d="M512 97c-19 8-39 14-60 16 22-13 38-34 46-58-20 12-43 21-67 25-19-19-46-32-77-32-58 0-117 52-102 129-87-4-165-46-216-110-24 40-19 107 32 140-17 0-33-5-48-13v1c0 51 36 93 84 103-15 4-34 5-47 2 13 42 52 72 98 73-47 36-96 49-155 44 46 30 102 47 161 47 197 0 306-168 299-312 20-15 38-34 52-55z"/>
       </svg>
       @metafizzyco
     </a>
   </li>
   <li class="footer-socials__item">
     <a class="footer-socials__link" href="https://instagram.com/metafizzy">
-      <svg class="footer-socials__symbol">
-        <use xlink:href="#instagram-logo"></use>
+      <svg class="footer-socials__icon" xmlns="http://www.w3.org/2000/svg"
+        viewbox="0 0 512 512" width="32" height="32">
+        <path d="M256 127c-71 0-129 58-129 129s58 129 129 129 129-58 129-129-58-129-129-129zm0 213c-46 0-84-38-84-84s38-84 84-84 84 38 84 84-38 84-84 84zm165-218c0 17-14 30-30 30-17 0-30-14-30-30s14-30 30-30c16-1 30 13 30 30zm45-76C419-1 360 4 256 4S94-1 46 46C-1 94 4 152 4 256s-5 163 42 210 105 42 210 42c104 0 163 5 210-42s42-105 42-210 5-162-42-210zm-32 388c-32 32-110 29-178 29-67 0-145 3-178-29S49 324 49 256 46 111 78 78s110-29 178-29c67 0 145-3 178 29s29 110 29 178 3 145-29 178z"/>
       </svg>
-      instagram.com/metafizzy
+      metafizzy
     </a>
   </li>
 </ul>
