--- a/modules/site-header/site-header.mustache
+++ b/modules/site-header/site-header.mustache
@@ -1,8 +1,6 @@
 <header class="site-header col">
   <a class="site-header__link" href=".">
-    <svg class="site-header__logo">
-      <use xlink:href="#logo-pizza-logo"></use>
-    </svg>
+    {{> logo-pizza-logo}}
     <span class="site-header__title">Logo Pizza</span>
   </a>
 </header>
