--- a/modules/homepage-header/homepage-header.mustache
+++ b/modules/homepage-header/homepage-header.mustache
@@ -1,8 +1,6 @@
 <div class="col">
   <header class="homepage-header">
-    <svg class="homepage-header__logo">
-      <use xlink:href="#logo-pizza-logo"></use>
-    </svg>
+    {{> logo-pizza-logo}}
     <h1 class="homepage-header__title">Logo Pizza</h1>
     <p class="homepage-header__tagline">Hot &amp; ready logos for sale</p>
   </header>
