--- a/modules/site-header/site-header.css
+++ b/modules/site-header/site-header.css
@@ -12,7 +12,7 @@
   text-decoration: none;
 }
 
-.site-header__logo {
+.site-header .logo-pizza-logo {
   width: 50px;
   height: 50px;
   fill: #E21;
@@ -20,7 +20,7 @@
   margin-right: 10px;
 }
 
-.site-header__link:hover .site-header__logo { fill: #333; }
+.site-header__link:hover .logo-pizza-logo { fill: #333; }
 
 .site-header__title {
   font-size: 1.5rem;
