🛠 homepage & logo page v2 updates

--- a/modules/homepage-header/homepage-header.mustache
+++ b/modules/homepage-header/homepage-header.mustache
@@ -2,6 +2,8 @@
   <header class="homepage-header">
     {{> logo-pizza-logo}}
     <h1 class="homepage-header__title">Logo Pizza</h1>
+    {{> logo-pizza-wordmark}}
     <p class="homepage-header__tagline">Hot &amp; ready logos for sale</p>
+    <p class="homepage-header__tagline">Vol. 2</p>
   </header>
 </div>
