--- a/modules/homepage-intro/homepage-intro.mustache
+++ b/modules/homepage-intro/homepage-intro.mustache
@@ -1,9 +1,8 @@
 <div class="homepage-intro col">
   <p class="homepage-intro__copy">
-    <strong class="homepage-intro__price-quote">Any logo:
-      <span class="current-price">${{currentPrice}}</span>
-    </strong>.
-    Price increases by $20 with each logo sold.
-  </p>
-  <p class="homepage-intro__copy">Logos can be purchased only once. You alone get exclusive rights to use it.</p>
+    <strong>Current price for any logo: ${{currentPrice}}</strong></p>
+  <p class="homepage-intro__copy">
+    Price increases by $20 with each logo sold.</p>
+  <p class="homepage-intro__copy">
+    Logos can be purchased only once. You alone get exclusive rights to use it.</p>
 </div>
