--- a/modules/previous/previous.mustache
+++ b/modules/previous/previous.mustache
@@ -1,5 +1,5 @@
 <div class="previous section">
-  <h2 class="section-title">Volume 1</h2>
+  <h2 class="section-title">Sold in Volume 1</h2>
   <ul class="thumbnails">
     {{#each thumbnails.vol1}}
       {{> thumbnail}}
