--- a/modules/site-header/site-header.mustache
+++ b/modules/site-header/site-header.mustache
@@ -2,5 +2,6 @@
   <a class="site-header__link" href=".">
     {{> logo-pizza-logo}}
     <span class="site-header__title">Logo Pizza</span>
+    {{> logo-pizza-wordmark}}
   </a>
 </header>
