--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -70,7 +70,7 @@
           <div class="purchase-text">
             <p>Purchasing this logo you get:</p>
             <ul>
-              <li>Production-ready asset files in vector AI, PDF, EPS, and raster PNG. Ready to be used in print, document, web, and video.</li>
+              <li>Production-ready asset files in vector AI, PDF, SVG, and raster PNG. Ready to be used in print, document, web, and video.</li>
               <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.</li>
               {{#ifOr variants customColors}}
                 <li>
