--- a/modules/homepage-header/homepage-header.css
+++ b/modules/homepage-header/homepage-header.css
@@ -15,12 +15,18 @@
 }
 
 .homepage-header__title {
-  font-size: 2.0rem;
-  text-transform: uppercase;
-  line-height: 1;
   margin: 0;
-  margin-bottom: 5px;
-  letter-spacing: 0.2em;
+  height: 0;
+  overflow: hidden;
+  text-indent: -9999px;
+}
+
+.homepage-header .logo-pizza-wordmark {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  max-width: 483px;
 }
 
 .homepage-header__tagline {
@@ -38,10 +44,6 @@
     width: 240px;
     height: 240px;
     margin-bottom: -30px;
-  }
-
-  .homepage-header__title {
-    font-size: 3.5rem;
   }
 
 }
