🛠 vol 2 just about ready to go

--- a/modules/hire-me/hire-me.mustache
+++ b/modules/hire-me/hire-me.mustache
@@ -7,6 +7,6 @@
     </span>
   </div>
   <div class="duo__cell">
-    <img class="hire-me__image" src="../img/custom-logos2.png" alt="Custom logos" />
+    <img class="hire-me__image" src="../img/custom-logos3.png" alt="Custom logos by Metafizzy" />
   </div>
 </div>
