--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -65,7 +65,7 @@
         {{> custom-colors}}
 
         {{#unless isSold}}
-          <a class="purchase-button" href="https://gumroad.com/l/logopizza">Buy Logo ${{currentPrice}}</a>
+          <a class="purchase-button" href="https://gumroad.com/l/logo-pizza-vol-2">Buy Logo ${{currentPrice}}</a>
 
           <div class="purchase-text">
             <p>Purchasing this logo you get:</p>
