--- a/modules/about/about.mustache
+++ b/modules/about/about.mustache
@@ -3,11 +3,12 @@
 
   <div class="duo">
     <div class="duo__cell">
-      <p>Man, I love logos. A little piece of imagery that represents the ideal you want your project to be — that's design magic right there. I've been able to work on some great logo projects, but I've been itching to do more. Rather than wait for projects to come my way, I put myself to work: <strong>design 50 logos.</strong> I tried pushing myself: exploring different styles, subjects, and techniques. It was like design boot camp: working all those muscles you never use. It wasn't all pretty, but I'm proud of this work and these logos. Each one has something special. Each one is ready to be printed on t-shirts, fit inside an app icon, or shown off big-as-hell up on a billboard.</p>
+      <p>Man, I love logos. A little piece of imagery that represents the ideal you want your project to be — that's design magic right there.</p>
+      <p>Last year, I jumped into the deep end by producing 50 logos and putting them up for sale. It was a big excercise in an effort to kick-start my career as a logo designer. Turns out people needed &rsquo;em. Now I'm back, one year wiser, with 30 new logos.</p>
     </div>
     <div class="duo__cell">
       <p>This is where you come in. I've got 50 logos. You've got a place for one. You've got something you're working on that could use a logo. You might not have been in the market for a custom design job. But now you have 50 options to choose from. 50 professionally designed, production ready, high quality logos. All you need is one.</p>
-      <p>&mdash; Dave</p>
+      <p>&mdash; Dave DeSandro</p>
     </div>
   </div>
 
