--- a/modules/hire-me/hire-me.css
+++ b/modules/hire-me/hire-me.css
@@ -3,9 +3,9 @@
 
 .hire-me {
   border-radius: 20px;
-  background: #EEE;
   margin-top: 40px;
   margin-bottom: 40px;
+  border: 8px solid #E21;
 }
 
 .hire-me__image {
