--- a/modules/signup/signup.mustache
+++ b/modules/signup/signup.mustache
@@ -4,7 +4,7 @@
   <form action="//metafizzy.us12.list-manage.com/subscribe/post?u=e16e9b3ca5712c79a647caf32&amp;id=ff5bd908e1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="signup__form validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
         <label class="signup__label" for="mce-EMAIL">Email</label>
-        <input type="email" value="" name="EMAIL" class="signup__email email" id="mce-EMAIL" placeholder="fizzybear@example.com" required />
+        <input type="email" value="" name="EMAIL" class="signup__email email" id="mce-EMAIL" placeholder="email@example.com" required />
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e16e9b3ca5712c79a647caf32_ff5bd908e1" tabindex="-1" value=""></div>
         <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="signup__button button">
       </div>
