📝 add license page

--- a/modules/flavor-text/flavor-text.mustache
+++ b/modules/flavor-text/flavor-text.mustache
@@ -4,7 +4,9 @@
     <div class="flavor-text__copy">
       <ul>
         <li>Production-ready asset files in vector AI, PDF, EPS, and raster PNG. Ready to be used in print, document, web, and video.</li>
-        <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.</li>
+        <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo. View
+          <a href="license">Logo Pizza Logo License Agreement</a>.
+        </li>
         <li>Variants: one-color treatments for light and dark backgrounds, custom colors, and/or alternate imagery.</li>
       </ul>
     </div>
