--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -71,7 +71,9 @@
             <p>Purchasing this logo you get:</p>
             <ul>
               <li>Production-ready asset files in vector AI, PDF, SVG, and raster PNG. Ready to be used in print, document, web, and video.</li>
-              <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.</li>
+              <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.
+              View <a href="license">Logo Pizza Logo License Agreement</a>.
+              </li>
               {{#ifOr variants customColors}}
                 <li>
                   Variants: {{commaListVariants variants}}{{#if customColors}}{{#if variants}},{{/if}} custom colors{{/if}}.
