--- a/modules/collage/collage-vol2.mustache
+++ b/modules/collage/collage-vol2.mustache
@@ -1,3 +1,3 @@
 <div class="collage">
-  <img class="collage__image" src="../img/collage-vol2.png" alt="Logo Pizza vol. 2 logo pizza" />
+  <img class="collage__image" data-lazy="1200x1200" data-src="../img/collage-vol2.png" alt="Logo Pizza vol. 2 logo pizza" />
 </div>
