Day 1, 6 more logos sold

--- a/modules/about/about.mustache
+++ b/modules/about/about.mustache
@@ -4,7 +4,7 @@
   <div class="duo">
     <div class="duo__cell">
       <p>Man, I love logos. A little piece of imagery that represents the ideal you want your project to be — that's design magic right there.</p>
-      <p>Last year, I jumped into the deep end by producing 50 logos and putting them up for sale. It was a big excercise in an effort to kick-start my career as a logo designer. Turns out people needed &rsquo;em. Now I'm back, one year wiser, with 30 new logos.</p>
+      <p>Last year, I jumped into the deep end by producing 50 logos and putting them up for sale. It was a big exercise in an effort to kick-start my career as a logo designer. Turns out people needed &rsquo;em. Now I'm back, one year wiser, with 30 new logos.</p>
     </div>
     <div class="duo__cell">
       <p>This is where you come in. I've got 50 logos. You've got a place for one. You've got something you're working on that could use a logo. You might not have been in the market for a custom design job. But now you have 50 options to choose from. 50 professionally designed, production ready, high quality logos. All you need is one.</p>
