portfolio typo, sunset hero sold

--- a/templates/license.mustache
+++ b/templates/license.mustache
@@ -38,7 +38,7 @@
 
     <p>Subject to the purchase of the Logo, You own its copyright and all intellectual property rights inherent in or relating to the Logo.</p>
 
-    <p>Metafizzy shall have a worldwide, perpetual, non-exclusive, royalty-free, sublicenseable and transferable license to use and display the Logo as part of its portolio and merchandise.</p>
+    <p>Metafizzy shall have a worldwide, perpetual, non-exclusive, royalty-free, sublicenseable and transferable license to use and display the Logo as part of its portfolio and merchandise.</p>
 
     <h2>Prohibited Uses</h2>
 
