--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -12,12 +12,12 @@
   <meta name="twitter:site" content="@metafizzyco" />
   <meta name="twitter:title" content="Logo Pizza" />
   <meta name="twitter:description" content="Hot and ready logos for sale" />
-  <meta name="twitter:image" content="http://logo.pizza/img/collage-card-vol2.png" />
+  <meta name="twitter:image" content="https://logo.pizza/img/collage-card-vol2.png" />
   {{! Facebook OpenGraph }}
-  <meta property="og:url" content="http://logo.pizza" />
+  <meta property="og:url" content="https://logo.pizza" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Logo Pizza" />
-  <meta property="og:image" content="http://logo.pizza/img/collage-card-vol2.png" />
+  <meta property="og:image" content="https://logo.pizza/img/collage-card-vol2.png" />
   <meta property="og:site_name" content="Logo Pizza" />
   <meta property="og:description" content="Hot and ready logos for sale" />
 
